--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -219,9 +219,26 @@ ol {
   width: 40px;
   aspect-ratio: 1;
   border-radius: 100%;
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+}
+
+.icon-btn::after {
+  content: "";
+  width: 100%;
+  height: 0;
+  background-color: var(--black-100-47);
+  position: absolute;
+  left: 0;
+  top: 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.icon-btn:hover::after {
+  height: 100%;
 }
 
 .icon-btn-black {
@@ -235,8 +252,23 @@ ol {
 }
 
 .icon-btn-content {
-  width: 18px; /* temporary */
+  width: 45%;
   display: block;
+  position: relative;
+  z-index: 2;
+}
+
+/* ----- Common scroll bar ----- */
+.scroll-bar::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+.scroll-bar::-webkit-scrollbar-thumb {
+  border: 4px solid transparent;
+  background-color: var(--white-20);
+  border-radius: 24px;
+  background-clip: padding-box;
 }
 
 .h1,
