footer: add css in media

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -180,3 +180,9 @@ footer {
 
 @media (max-width: 1279px) {
 }
+
+@media (max-width: 991px) {
+  .footer-content-wrapper {
+    flex-direction: column;
+  }
+}
