--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -31,7 +31,7 @@ footer {
   width: 100%;
 }
 
-.footer-slide {
+.footer-slider {
   margin-bottom: 79px;
 }
 
@@ -82,11 +82,8 @@ footer {
 }
 
 .footer-contact-location {
-  font-size: 12px;
   color: var(--white-50);
-  text-decoration: underline;
-  text-underline-offset: 4px;
-  margin-top: 14px;
+  margin-top: 8px;
 }
 
 .footer-update-wrapper {
@@ -130,18 +127,20 @@ footer {
 .finance-media-wrapper {
   display: flex;
   align-items: center;
-  gap: 48px;
+  gap: 36px 48px;
+  flex-wrap: wrap;
   margin-top: 38px;
 }
 
 .finance-img-content {
-  max-width: 145px;
-  max-height: 72px;
   filter: grayscale(1);
+  flex-shrink: 0;
   transition: all 0.3s ease-in-out;
 }
 
 .finance-img {
+  max-width: 145px;
+  max-height: 72px;
   object-fit: contain;
 }
 
@@ -165,6 +164,8 @@ footer {
   font-family: var(--font-acumin-wide);
   display: flex;
   align-items: start;
+  gap: 36px 24px;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
@@ -179,10 +180,108 @@ footer {
 }
 
 @media (max-width: 1279px) {
+  .footer-slider {
+    margin-bottom: 58px;
+  }
+
+  .footer-contact-title {
+    margin-bottom: 28px;
+  }
+
+  .footer-contact-content {
+    font-size: 16px;
+  }
+
+  .footer-platforms {
+    margin-top: 56px;
+  }
+
+  .finance-media-wrapper {
+    margin-top: 32px;
+  }
+
+  .the-curious-tag {
+    margin-top: 40px;
+  }
 }
 
 @media (max-width: 991px) {
+  .footer-ig-link-wrapper {
+    margin-bottom: 30px;
+    font-size: 25px;
+    line-height: 1.25;
+  }
+
+  .footer-slider {
+    margin-bottom: 42px;
+  }
+  .footer-contact-content {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 767px) {
   .footer-content-wrapper {
     flex-direction: column;
+  }
+
+  .footer-platforms {
+    flex-direction: column-reverse;
+  }
+
+  .footer-content,
+  .footer-update-wrapper,
+  .footer-link-wrapper {
+    width: 100%;
+  }
+
+  .footer-slider {
+    margin-bottom: 34px;
+  }
+
+  .footer-slide-img-content {
+    width: 160px;
+    height: 150px;
+  }
+
+  .footer-contact-title {
+    margin-bottom: 20px;
+  }
+
+  .footer-sign-up-form {
+    margin-top: 12px;
+  }
+
+  .footer-sign-up-form input {
+    font-size: 16px;
+  }
+
+  .footer-sign-up-btn {
+    margin-top: 28px;
+  }
+
+  .footer-social-media-wrapper {
+    margin-top: 36px;
+  }
+
+  .footer-link-wrapper {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 575px) {
+  .footer-update-wrapper {
+    max-width: 100%;
+  }
+
+  .footer-contact-item {
+    gap: 12px;
+  }
+
+  .footer-contact-item:not(:last-child) {
+    margin-bottom: 24px;
+  }
+
+  .finance-media-wrapper {
   }
 }
