--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,30 +84,49 @@
 }
 
 .primary-slider-arrows .splide__arrow {
-  top: 0;
+  top: -16%;
   width: 56px;
   height: 46px;
   opacity: 1;
   border-radius: 0;
+  color: var(--white);
+  background: var(--black);
+  transform: translateY(16%) skew(-14deg, 0);
+  transition: all 0.3s ease-in-out;
 }
 
-.primary-slider-arrows .splide__arrow:focus {
+.primary-slider-arrows .splide__arrow:hover {
+  opacity: 1;
+  background: var(--primary-100);
+  color: var(--black);
+  transform: translateY(16%) skew(-14deg, 0) scale(1.1);
+}
+
+.splide.is-focus-in .splide__arrow:focus {
   outline: none;
 }
 
 .primary-slider-arrows .splide__arrow--prev {
   left: auto;
-  right: 80px;
+  right: 72px;
 }
 
 .primary-slider-arrows .splide__arrow--next {
-  right: 1px;
+  right: 8px;
 }
+
+.primary-slider-arrows .splide__arrow svg {
+  width: 10px;
+  height: 16px;
+  flex-shrink: 0;
+}
+
 .featured-track {
   overflow: visible;
 }
 
 .featured-slider-wrapper {
+  width: 605px;
   background-color: var(--white-200);
   padding-inline: 56px;
   padding-bottom: 32px;
