created: explore more, two column, cta banner sections

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -140,6 +140,10 @@ ol {
   list-style-type: none;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .mx-auto {
   margin-inline: auto;
 }
@@ -196,6 +200,7 @@ input:focus-visible {
 
 .btn {
   min-width: 206px;
+  max-width: max-content;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -220,7 +225,7 @@ input:focus-visible {
 @media (max-width: 767px) {
   .btn-big {
     min-width: 216px;
-    padding: 24px;
+    padding: 18px;
   }
 }
 
@@ -473,4 +478,19 @@ h6:not(:where(.h1, .h2, .h3, .h4, .h5)) {
 .font-60 {
   font-size: 60px;
   line-height: var(--line-height-1_2);
+}
+@media (max-width: 991px) {
+  .font-60 {
+    font-size: 48px;
+  }
+}
+@media (max-width: 767px) {
+  .font-60 {
+    font-size: 38px;
+  }
+}
+@media (max-width: 575px) {
+  .font-60 {
+    font-size: 30px;
+  }
 }
