--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -12,6 +12,21 @@
     width: 580px;
     padding-inline: 40px;
   }
+
+  /* ----- Two column section ----- */
+  .champions-column-section {
+    padding-block: 104px 72px;
+  }
+
+  /* ----- Two column section ----- */
+  .two-column-description {
+    margin-block: 32px;
+  }
+
+  /* ----- Cta banner section ----- */
+  .home-cta-banner {
+    padding-block: 72px 42px;
+  }
 }
 
 @media (max-width: 991px) {
@@ -63,6 +78,58 @@
   .featured-content-price {
     margin-top: 10px;
   }
+
+  /* ----- Explore more section ----- */
+  .home-explore-more {
+    padding-block: 74px 105px;
+  }
+
+  .explore-wrapper {
+    width: 604px;
+    height: 400px;
+  }
+
+  .explore-slider {
+    margin-block: 50px 40px;
+  }
+
+  /* ----- Two column section ----- */
+  .champions-column-section {
+    padding-block: 0 50px;
+  }
+
+  .two-column-wrapper {
+    flex-direction: column;
+    gap: 70px;
+  }
+
+  .two-column-section::before {
+    display: none;
+  }
+
+  .two-column-img-content {
+    max-width: none;
+    width: calc(100% + 36px);
+    height: 425px;
+  }
+
+  .two-column-content,
+  .two-column-description {
+    max-width: 100%;
+  }
+
+  .two-column-content {
+    width: 100%;
+  }
+
+  .two-column-description {
+    margin-block: 28px;
+  }
+
+  /* ----- Cta banner section ----- */
+  .home-cta-banner {
+    padding-top: 50px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -107,6 +174,18 @@
     font-size: 22px;
     margin-top: 6px;
   }
+
+  /* ----- Explore more section ----- */
+  .explore-wrapper {
+    width: 564px;
+    height: 360px;
+  }
+
+  /* ----- Two column section ----- */
+  .two-column-description {
+    font-size: 16px;
+    line-height: 1.625;
+  }
 }
 
 @media (max-width: 575px) {
@@ -132,5 +211,11 @@
   .featured-slider-img-content {
     width: 272px;
     height: 252px;
+  }
+
+  /* ----- Explore more section ----- */
+  .explore-wrapper {
+    width: 345px;
+    height: 225px;
   }
 }
