--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -62,17 +62,12 @@
   --blue: #0298d8;
   --line-height-1_2: 1.2;
   --font-transducer: "Transducer";
-  --font-transducer-extended-regular: "Transducer Extended Regular";
-  --font-transducer-extended: "Transducer Extended";
-  --font-transducer-extended-hairline: "Transducer Extended Hairline";
-  --font-transducer-condensed-hairline: "Transducer Condensed Hairline";
-  --font-transducer-condensed: "Transducer Condensed";
-  --font-transducer-condensed-Regular: "Transducer Condensed Regular";
-  --font-acumin: "Acumin Pro";
-  --font-acumin-condensed: "Acumin Pro Condensed";
-  --font-acumin-extra-condensed: "Acumin Pro ExtraCondensed";
-  --font-acumin-semi-condensed: "Acumin Pro SemiCondensed";
-  --font-acumin-wide: "Acumin Pro Wide";
+  --font-transducer-exp: "Transducer Exp";
+  --font-transducer-black-exp: "Transducer Black Exp";
+  --font-transducer-thin-exp-hairline: "Transducer Thin Exp Hairline";
+  --font-transducer-black-cond: "Transducer Black Cond";
+  --font-acumin-pro-wide: "Acumin Pro Wide";
+  --font-acumin-pro-semicondensed: "Acumin Pro SemiCondensed";
 }
 
 .bg-primary {
@@ -100,7 +95,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: var(--black-200);
-  font-family: var(--font-acumin-wide);
+  font-family: var(--font-acumin-pro-wide);
   font-weight: 400;
   display: flex;
   flex-direction: column;
@@ -167,7 +162,7 @@ input {
   font-size: 16px;
   border-bottom: 1px solid var(--white);
   padding-block: 12px;
-  font-family: var(--font-acumin-wide);
+  font-family: var(--font-acumin-pro-wide);
   transition: all 0.3s ease-in-out;
 }
 
@@ -206,7 +201,7 @@ input:focus-visible {
   justify-content: center;
   padding: 32px;
   font-size: 14px;
-  line-height: 1.214;
+  line-height: 1.2;
   text-transform: uppercase;
   border: none;
   font-family: var(--font-transducer);
@@ -376,8 +371,8 @@ h1:not(:where(.h2, .h3, .h4, .h5, .h6)) {
 h2:not(:where(.h1, .h3, .h4, .h5, .h6)) {
   font-size: 45px;
   line-height: 1.4;
-  font-family: var(--font-transducer-condensed);
-  font-weight: 500;
+  font-family: var(--font-transducer);
+  font-weight: 400;
 }
 @media (max-width: 991px) {
   .h2,
