--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -320,3 +320,9 @@
   max-width: 200px;
   max-height: 120px;
 }
+
+.shop-brand-content img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
