--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,20 +210,30 @@
   padding-block: 155px 92px;
 }
 
-.two-column-section {
+.two-column-bg-left-layer,
+.two-column-bg-right-layer {
   position: relative;
 }
 
-.two-column-section::before {
+.two-column-bg-left-layer::before,
+.two-column-bg-right-layer::after {
   content: "";
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
-  left: 0;
   z-index: -1;
   background-color: var(--white-200);
+}
+
+.two-column-bg-left-layer::before {
+  left: 0;
   clip-path: polygon(42% 0, 0 0, 0 100%);
+}
+
+.two-column-bg-right-layer::after {
+  right: 0;
+  clip-path: polygon(100% 0, 72% 100%, 100% 100%);
 }
 
 .two-column-wrapper {
@@ -325,4 +335,90 @@
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+/* ----- Finance column section ----- */
+.finance-column-section {
+  padding-block: 70px 140px;
+}
+
+/* ----- Testimonial section ----- */
+.testimonial-section {
+  background: var(--black-300);
+  padding-block: 168px 150px;
+  position: relative;
+}
+
+.testimonial-img {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.testimonial-slider {
+  max-width: 960px;
+  margin-bottom: 66px;
+}
+
+.testimonial-content-wrapper {
+  max-width: 792px;
+}
+
+.testimonial-content-tag {
+  font-size: 108px;
+  font-family: var(--font-transducer);
+}
+
+.testimonial-content {
+  font-family: var(--font-transducer-black-exp);
+  font-style: italic;
+  margin-bottom: 55px;
+}
+
+.testimonial-slider .splide__pagination {
+  bottom: -70px;
+  left: 50%;
+  transform: translateX(-50%);
+  right: auto;
+  padding: 0;
+}
+
+.testimonial-slider .splide__pagination li {
+  display: flex;
+  line-height: 0;
+}
+
+.testimonial-slider .splide__pagination__page {
+  width: 74px;
+  height: 2px;
+  margin: 0;
+  border-radius: 0;
+  padding-block: 6px;
+  background: transparent;
+  opacity: 1;
+  position: relative;
+}
+
+.testimonial-slider .splide__pagination__page::before {
+  content: "";
+  width: 74px;
+  height: 2px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  background: var(--primary-100);
+  opacity: 30%;
+  transition: all 0.3s ease-in-out;
+}
+
+.testimonial-slider .splide__pagination__page.is-active,
+.testimonial-slider .splide__pagination__page.is-active::before {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.splide.is-focus-in .splide__pagination__page:focus,
+.splide__pagination li:focus-visible {
+  outline: none;
 }
