--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -184,6 +184,11 @@
   .testimonial-slider .splide__pagination {
     bottom: -54px;
   }
+
+  /* ----- Cta blog section ----- */
+  .cta-blog-title .font-60 {
+    font-size: 50px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -292,6 +297,10 @@
     height: 225px;
   }
 
+  .explore-wrapper .btn {
+    font-size: 10px;
+  }
+
   /* ----- Shop by brand section ----- */
   .shop-brand-title {
     flex-direction: column;
@@ -307,5 +316,10 @@
   .testimonial-slider .splide__pagination__page::before,
   .testimonial-slider .splide__pagination__page {
     width: 44px;
+  }
+
+  /* ----- Cta blog section ----- */
+  .cta-blog-wrapper {
+    padding: 14px;
   }
 }
